--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   </head>
   <body>
     <div id="root"></div>
+    <h1>hallo in iuji haha
+    </h1>
+    <p>masa iya sihh maniess</p>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
