--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <h1>hallo in iuji haha
     </h1>
     <p>masa iya sihh maniess</p>
+    <h1>hallo in iuji haha
+    </h1>
+    <p>masa iya sihh maniess</p>
+    <h1>hallo in iuji haha
+    </h1>
+    <p>masa iya sihh maniess</p>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
